# ros2_eloquent_syncing

./: .gitignore
src/py_pubsub/: package.xml  setup.py
src/py_pubsub/py_pubsub/: publisher_member_function.py  subscriber_member_function.py
src/temp_sync/: CMakeLists.txt  package.xml
src/temp_sync/src/: temp_listener.cpp  temp_talker.cpp
